--- a/mainSite/index.html
+++ b/mainSite/index.html
@@ -17,14 +17,14 @@
     <title>SEO Dream - Creative SEO HTML5 Template by TemplateMo</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="mainSite/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="mainSite/assets/css/fontawesome.css">
-    <link rel="stylesheet" href="mainSite/assets/css/templatemo-seo-dream.css">
-    <link rel="stylesheet" href="mainSite/assets/css/animated.css">
-    <link rel="stylesheet" href="mainSite/assets/css/owl.css">
+    <link rel="stylesheet" href="assets/css/fontawesome.css">
+    <link rel="stylesheet" href="assets/css/templatemo-seo-dream.css">
+    <link rel="stylesheet" href="assets/css/animated.css">
+    <link rel="stylesheet" href="assets/css/owl.css">
     
     
 <!--
@@ -60,18 +60,18 @@ https://templatemo.com/tm-563-seo-dream
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-              <h4>SEO Dream <img src="mainSite/assets/images/logo-icon.png" alt=""></h4>
+              <h4>SEO Dream <img src="assets/images/logo-icon.png" alt=""></h4>
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
               <li class="scroll-to-section"><a href="index.html" class="active">Home</a></li>
               <li class="scroll-to-section"><a href="#about">About Us</a></li>
-              <li class="scroll-to-section"><a href="mainSite/cources.html">Cources</a></li>
+              <li class="scroll-to-section"><a href="cources.html">Cources</a></li>
               <li class="scroll-to-section"><a href="#portfolio">Reviews</a></li>
-              <li class="scroll-to-section"><a href="mainSite/contactUs.html">Contact Us</a></li>
-              <li class="scroll-to-section"><a href="mainSite/Log-in.html">Login</a></li>               
-              <li class="scroll-to-section"><div class="main-blue-button"><a href="mainSite/cources.html">Get it Now!</a></div></li> 
+              <li class="scroll-to-section"><a href="contactUs.html">Contact Us</a></li>
+              <li class="scroll-to-section"><a href="Log-in.html">Login</a></li>               
+              <li class="scroll-to-section"><div class="main-blue-button"><a href="cources.html">Get it Now!</a></div></li> 
             </ul>        
             <a class='menu-trigger'>
                 <span>Menu</span>
@@ -108,7 +108,7 @@ https://templatemo.com/tm-563-seo-dream
             </div>
             <div class="col-lg-6">
               <div class="right-image wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
-                <img src="mainSite/assets/images/banner-right-image.png" alt="">
+                <img src="assets/images/banner-right-image.png" alt="">
               </div>
             </div>
           </div>
@@ -124,7 +124,7 @@ https://templatemo.com/tm-563-seo-dream
       <div class="row features-content" style="padding: 2%;">
         <div class="col-lg-6">
           <div class="left-image wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.5s">
-            <img src="mainSite/assets/images/about-left-image.png" alt="">
+            <img src="assets/images/about-left-image.png" alt="">
           </div>
         </div>
         <div class="col-lg-6 align-self-center wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
@@ -298,12 +298,12 @@ https://templatemo.com/tm-563-seo-dream
   </footer>
 
   <!-- Scripts -->
-  <script src="mainSite/vendor/jquery/jquery.min.js"></script>
-  <script src="mainSite/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="mainSite/assets/js/owl-carousel.js"></script>
-  <script src="mainSite/assets/js/animation.js"></script>
-  <script src="mainSite/assets/js/imagesloaded.js"></script>
-  <script src="mainSite/assets/js/custom.js"></script>
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/owl-carousel.js"></script>
+  <script src="assets/js/animation.js"></script>
+  <script src="assets/js/imagesloaded.js"></script>
+  <script src="assets/js/custom.js"></script>
 
 </body>
 </html>
