--- a/mainSite/cources.html
+++ b/mainSite/cources.html
@@ -60,13 +60,13 @@ https://templatemo.com/tm-563-seo-dream
         <div class="col-12">
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
-            <a href="index.html" class="logo">
+            <a href="../index.html" class="logo">
               <h4>SEO Dream <img src="assets/images/logo-icon.png" alt=""></h4>
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li class="scroll-to-section"><a href="index.html" class="active">Home</a></li>
+              <li class="scroll-to-section"><a href="../index.html" class="active">Home</a></li>
               <li class="scroll-to-section"><a href="#about">About Us</a></li>
               <li class="scroll-to-section"><a href="cources.html">Cources</a></li>
               <li class="scroll-to-section"><a href="#portfolio">Reviews</a></li>
